# telesco-pi

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: copilot-setup-steps.yml
apps/backend/: alembic.ini  requirements.txt
apps/backend/alembic/: env.py
apps/backend/app/: __init__.py  main.py
apps/frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
apps/frontend/src/: App.tsx  index.css
docs/ai_context/: anexo_comun_1_arquitectura.txt  anexo_comun_2_criterios.txt  prompt_agent_1_backend.txt  prompt_agent_2_frontend.txt  prompt_agent_3_astronomy.txt  prompts_desarrollo_sesiones.md
docs/architecture/: astronomy-engine.md  runtime-and-jobs.md
docs/decisions/: adr-001-engine-architecture.md  adr-002-plate-solving-strategy.md
docs/product/: live-stacking.md  orbital-tracking.md  pipelines.md  planner-and-calibration.md
docs/risks/: performance-and-scientific-limitations.md
docs/testing/: astronomy-engine.md
libs/: __init__.py
libs/astronomy/: __init__.py
libs/astronomy/calibration/: __init__.py  alignment.py  confidence.py  persistence.py  reference_state.py
libs/astronomy/catalogs/: __init__.py  loaders.py  models.py  search.py  tle_store.py
libs/astronomy/contracts/: __init__.py  calibration.py  catalogs.py  common.py  livestack.py  orbital.py  pipelines.py  planetary.py  planning.py  solving.py  visibility.py
libs/astronomy/domain/: __init__.py  constraints.py  diagnostics.py  observer.py  quality_profiles.py  targets.py
libs/astronomy/jobs/: __init__.py  models.py  orchestration.py  persistence.py
libs/astronomy/orbital/: __init__.py  passes.py  propagation.py  recommendations.py  tle.py  tracking.py
libs/astronomy/planner/: __init__.py  explanations.py  models.py  rules.py  scheduler.py
libs/astronomy/pointing/: __init__.py  corrections.py  fit.py  model.py
libs/config/: __init__.py  settings.py
libs/devices/: __init__.py  interfaces.py  models.py  registry.py  stubs.py
libs/diagnostics/: __init__.py  logging.py
libs/sessions/: __init__.py  models.py  service.py
libs/storage/: __init__.py  models.py  service.py
services/simulator/: __init__.py  drivers.py
(+77 files in other folders)
