[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telesco-pi"
version = "0.1.0"
description = "Mobile-first astronomy platform backend foundation for Raspberry Pi 5."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.13.2",
  "apscheduler==3.10.4",
  "fastapi==0.115.0",
  "httpx==0.27.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.5.2",
  "pyserial==3.5",
  "sqlalchemy==2.0.35",
  "uvicorn==0.30.6",
  "websockets==13.0",
  "numpy>=1.26",
  "scipy>=1.13",
  "astropy>=6.1",
  "sgp4>=2.23",
  "opencv-python-headless>=4.10",
  "scikit-image>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
]
astronomy-full = [
  "skyfield>=1.48",
  "photutils>=1.13",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "libs*", "services*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
  "ignore:transforming other coordinates from <GCRS Frame:astropy.coordinates.baseframe.NonRotationTransformationWarning",
]

